Fixes results loading view style
The results loading view lost its style in previous commit. This commit
recovers the original style, that centers the results and increases the
font size.

--- a/src/app/modules/interaction/components/calculated-interactions-table/calculated-interactions-table.component.scss
+++ b/src/app/modules/interaction/components/calculated-interactions-table/calculated-interactions-table.component.scss
@@ -23,7 +23,7 @@ table {
   width: 100%;
 }
 
-mat-card-content {
+div {
   display: flex;
   flex-direction: column;
   align-items: center;
